work-url mobile position fix
was up too high. lowered height -1em

--- a/css/main2.css
+++ b/css/main2.css
@@ -1433,6 +1433,11 @@ video {
     .work-number {
         bottom: 5%;
         left: 19%;
+        z-index: 1;
+    }
+    
+    .work-url.werk {
+        bottom: -2em;
     }
 
 }
